<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practical4</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_android_details">AndroidDetailsActivity</string>
    <string name="title_activity_details_settings">DetailsSettingsActivity</string>
<string name="black">Black</string>
<string name="blue">Blue</string>
<string name="green">Green</string>
<string name="save">Save</string>
<string name="setting_text">Please select a background colour:</string>
<string name="preferences">Preferences</string>
</resources>

